--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,60 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  margin: 5% 10%;
+  font-size: larger;
+}
+
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+}
+
+h1 {
+  text-align: center;
+  color: #090000;
+}
+
+button {
+  margin: 5px;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  background-color: #f4f1f1;
+  color: #080000;
+  border: none;
+  border: 1px inset #080000;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: #a05445;
+}
+
+button:active {
+  background-color: #3e478e;
+  color: #f4f1f1;
+}
+
+.statistics {
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 20px;
+}
+
+.statistics p {
+  margin: 5px 0;
 }
